err/gemfire-rest-client.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Gemfire_Rest_Client'...
Compiling './lib/python3.5/site-packages/Gemfire_Rest_Client/GemfireClient.py'...
***   File "./lib/python3.5/site-packages/Gemfire_Rest_Client/GemfireClient.py", line 63
    print "Repository " + name + " does not exist in the server"
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Gemfire_Rest_Client/Region.py'...
***   File "./lib/python3.5/site-packages/Gemfire_Rest_Client/Region.py", line 168
    print str(data.status_code) + ": " + data.reason
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Gemfire_Rest_Client/UnitTests.py'...
***   File "./lib/python3.5/site-packages/Gemfire_Rest_Client/UnitTests.py", line 64
    id = 002
           ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/Gemfire_Rest_Client-0.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
